fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -31,24 +31,6 @@ h1 {
   margin: 0 auto 0 1rem;
 }
 
-nav {
-  align-items: center;
-  background: var(--primary-color);
-  box-shadow: 0px 5px 5px var(--shadow-color);
-  display: flex;
-  flex: 0 0 auto;
-  height: 3rem;
-  justify-content: space-between;
-}
-
-.nav-icon {
-  margin-right: 1rem;
-  text-decoration: none;
-}
-
-.nav-icon > img {
-  vertical-align: middle;
-}
 
 main {
   background: var(--editor-background);
@@ -59,36 +41,8 @@ main {
   margin: 1.5rem;
 }
 
-#schema-selection {
-  background-color: var(--editor-background);
-  border: none;
-  border-bottom: 1px solid var(--shadow-color);
+#status {
   color: var(--foreground-color);
-  width: 100%;
-}
-
-#breadcrumbs {
-  border-bottom: 1px solid var(--shadow-color);
-  color: var(--foreground-color);
-  flex: 0 0 1rem;
-}
-
-.breadcrumb {
-  cursor: pointer;
-}
-
-#breadcrumbs::before,
-.breadcrumb:not(:last-child)::after {
-  content: '›';
-  margin: 0 0.2rem;
-}
-
-.breadcrumb.array::before {
-  content: '[]';
-}
-
-.breadcrumb.object::before {
-  content: '{}';
 }
 
 #editor {
